--- a/main_app/templates/snowboard_detail.html
+++ b/main_app/templates/snowboard_detail.html
@@ -3,9 +3,9 @@
 {% block content %}
 <h1>{{ snowboard.brand }}{{ snowboard.model }}</h1>
 <ul>
-    <li>Brand: {{ snowboard.brand }}</li>
-    <li>Model: {{ snowboard.model }}</li>
-    <li>Size: {{ snowboard.size }}</li>
-    <li>Price: {{ snowboard.price }}</li>
+    <li><strong>Brand: {{ snowboard.brand }}</strong></li>
+    <li><strong>Model: {{ snowboard.model }}</strong></li>
+    <li><strong>Size: {{ snowboard.size }}</strong></li>
+    <li><strong>Price: {{ snowboard.price }}</strong></li>
 </ul>
 {% endblock %}
